--- a/BayesBinMix_models_latest.qmd
+++ b/BayesBinMix_models_latest.qmd
@@ -27,19 +27,19 @@ library(gmodels)
 
 ```{r}
 #Load census data and results from latest model
-censusdata_bin <- readRDS("./censusdata_bin_raceeth_033024.rds")
+censusdata_bin <- readRDS("./censusdata_bin_raceeth_042524.rds")
 censusdata<- load("./censusdata_updated_newvars.RData")
 agedist<-load("./census_age_dist.RData")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
-#Output from heating vector tuning-- 4/14/24
-res_all<-readRDS("./tuningheatsvec_4.14.24.rds")
-#It seems that heating vector with deltaT = 0.01 worked well for all datasets-- swap acceptance rates ranged from 54-56.8%
-#deltaT2: 22.2%, 25.7%, 22.7
+#Output from heating vector tuning-- 4/25/24-- had an issue with my binary data
+res_all<-readRDS("./tuningheatsvec_4.25.24.rds")
+#It seems that heating vector with deltaT = 0.01 worked well for all datasets-- swap acceptance rates ranged from 55.7% - 64%
 
-res_acs10<-res_all[[1]][["res_acs10_deltatemp1"]]
-res_acs15<-res_all[[1]][["res_acs15_deltatemp1"]]
-res_acs19<-res_all[[1]][["res_acs19_deltatemp1"]]
+
+res_acs10<-res_all[[1]][["res_acs10_deltatemp2"]]
+res_acs15<-res_all[[1]][["res_acs15_deltatemp2"]]
+res_acs19<-res_all[[1]][["res_acs19_deltatemp2"]]
 ```
 
 ```{r}
@@ -63,10 +63,12 @@ stats<-cbind(summary(res_acs10$parameters.ecr.mcmc)$statistics[,c(1,2)],
 tail(round(stats, 4), mapK) %>% kable()
 
 check<-as.matrix(res_acs10$parameters.ecr.mcmc)
-wts<-check[,163:171]
+wts<-check[,217:228]
 colMeans(wts)
 apply(wts, 2, sd) 
 apply(wts, 2, quantile, probs = c(0.025, 0.975))
+
+#Flagging mixture weights for clusters: 5,7
 ```
 
 ```{r}
@@ -92,7 +94,7 @@ second_highest_index<-function(vec){
 #### Explore cluster assignment based on ECR algorithm + Distribution of census variables across clusters
 
 ```{r}
-#For ACS 2010 and mapK = 9
+#For ACS 2010 and mapK = 12
 mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
 classificationprobs_10<-res_acs10$classificationProbabilities.ecr
 ClusterAssignment_ecr<-res_acs10$clusterMembershipPerMethod[,2]
@@ -105,7 +107,7 @@ classificationprobs_10$ClusterAssignment_ecr<-ClusterAssignment_ecr
 classificationprobs_10$maxProb<-maxProb
 classificationprobs_10$ClusterAssignment_temp<-ClusterAssignment_temp
 
-#9 census tracts that are not classified based on highest prob
+#10 census tracts that are not classified based on highest prob
 table(classificationprobs_10$ClusterAssignment_ecr,classificationprobs_10$ClusterAssignment_temp)
 
 classificationprobs_10 %>% filter(ClusterAssignment_temp != ClusterAssignment_ecr)
@@ -117,15 +119,22 @@ table(classificationprobs_10$ClusterAssignment_temp)
 
 classificationprobs_10$GEOID<-row.names(censusdata_bin$acs5_2010_bin)
 
-#**Since the distribution is not much different, we can re-assign these 9 census tracts to the cluster they belong based on the highest probability-- all other classificiations match perfectly, and so we will keep variable ClusterAssignment_ecr_temp.
+#**Since the distribution is not much different, we can re-assign these 10 census tracts to the cluster they belong based on the highest probability-- all other classifications match perfectly, and so we will keep variable ClusterAssignment_temp.
 #Also make a note of these "fuzzy" census tracts- to see if same across survey waves
 fuzzygeoids_10<-classificationprobs_10 %>% filter(ClusterAssignment_ecr != ClusterAssignment_temp) %>% select(GEOID)
-##Find census tracts for which the maximum probability of assignment is less than 50 for further exploration-- 83
-ctslw50<-classificationprobs_10 %>% filter(maxProb < 0.5) 
+##Find census tracts for which the maximum probability of assignment is less than 50 for further exploration-- 60 census tracts -only
+cts10lw50<-classificationprobs_10 %>% filter(maxProb < 0.5)
+table(cts10lw50$ClusterAssignment_temp)
 
+#EHR data only has 1260 unique census tracts for 2010 --check if these 60 are within cts10lw50
+#cts10lw50$census_tract<-str_sub(cts10lw50$GEOID,start=6, end = 11) 
+#sum(cts10lw50$census_tract %in% cts10) #only 41/60 are in the EHR data
+
+```
+
+```{r}
 #Prep Data
-classificationprobs_10$ClusterAssignment_final<- factor(classificationprobs_10$ClusterAssignment_temp, levels = 1:9, labels = paste0("cluster", 1:9, sep= " "))
-
+classificationprobs_10$ClusterAssignment_final<- factor(classificationprobs_10$ClusterAssignment_temp, levels = 1:mapK, labels = paste0("cluster", 1:mapK, sep= " "))
 
 dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment_final, maxProb)
 
@@ -157,25 +166,32 @@ table1(~ Lackplumbing_2010 + medianincome_2010 + BachelorHigherP_2010  +  Educat
 #### Distribution of assignment probabilities to the most probable cluster
 
 ```{r}
-boxplot10<- merged10 %>%  ggplot(aes(x = ClusterAssignment_final, y = maxProb, fill = ClusterAssignment_final)) +
+#filter(maxProb > 0.5) %>%  
+boxplot10<- merged10 %>% ggplot(aes(x = ClusterAssignment_final, y = maxProb, fill = ClusterAssignment_final)) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Cluster Assignment Probability", 
-       x= "")
+       x= "") +
+     theme(text = element_text(size = 12),
+          axis.ticks = element_blank(),
+          axis.text.x =element_blank()) 
 boxplot10
-dattable<- merged10 %>% rename(`Assignment Probability` = maxProb,
+dattable<- merged10 %>% filter(maxProb > 0.5) %>% rename(`Assignment Probability` = maxProb,
                     `Cluster Assignment` = ClusterAssignment_final) 
 
 table1::table1(~`Assignment Probability` |`Cluster Assignment`, data= dattable, overall = F)
 
 
-##Exploration of the 83 census tracts with prob < 0.5
+##Exploration of the 60 census tracts with prob < 0.5
 
-ctslw50 %>%  ggplot(aes(x = as.factor(ClusterAssignment_temp), y = maxProb, fill = as.factor(ClusterAssignment_temp))) +
+flags_boxplot<-ctslw50 %>%  ggplot(aes(x = as.factor(ClusterAssignment_temp), y = maxProb, fill = as.factor(ClusterAssignment_temp))) +
   geom_boxplot() +
   labs(fill = "Cluster Assignment", 
        y = "Assignment Probability (< 50%)", 
-       x= "")
+       x= "") +
+     theme(text = element_text(size = 12),
+          axis.ticks = element_blank(),
+          axis.text.x =element_blank()) 
 
 #Need to calcualte posterior probabilities
 #P(Z=k| K_map, x_i, pi,theta)
@@ -290,10 +306,6 @@ P2<-datbinprop10 %>% ggplot(aes(x = NSES_VARS, y = prop, fill = NSES_group)) +
 
 library(gridExtra)
 grid.arrange(P1,P2, ncol =2)
-
-
-
-
 
 figcomb<-alldat %>% ggplot(aes(x = NSES_VARS, y = prop, fill = NSES_group)) +
     geom_col()   +
